# waves_prediction

./: LICENSE  README.md  pyproject.toml
0_notebooks_scripts/cds_toolbox/: beginner_cds_toolbox.py
0_notebooks_scripts/definitions_zones_dnv/: dnv_params.xlsx  dnv_zones.xlsx  donnees_maritimes.ipynb  geolocator.ipynb
